# python-web-hw09

./: README.md  pyproject.toml
first/: config.ini  connect.py  load_jsons.py  main.py  models.py  spider.py
second/: main.py
second/json/: authors.json
